2015-12-05 Fred Gleason <fredg@paravelsystems.com>
	* Initial package creation.
2015-12-05 Fred Gleason <fredg@paravelsystems.com>
	* Stubbed out webhostd(8).
2015-12-05 Fred Gleason <fredg@paravelsystems.com>
	* Implemented the REBOOT command in webhostd(8).
2015-12-05 Fred Gleason <fredg@paravelsystems.com>
	* Implemented the UPGRADE command in webhostd(8).
2015-12-05 Fred Gleason <fredg@paravelsystems.com>
	* Implemented the NTP command in webhostd(8).
2015-12-05 Fred Gleason <fredg@paravelsystems.com>
	* Implemented the IP command in webhostd(8).
2015-12-05 Fred Gleason <fredg@paravelsystems.com>
	* Implemented the RESTART command in webhostd(8).
2015-12-12 Fred Gleason <fredg@paravelsystems.com>
	* Stubbed out a 'libwebhost' library in 'src/wh/'.
2015-12-12 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'WHCgiPost' class in 'src/wh/whcgipost.cpp' and
	'src/wh/whcgipost.h'.
	* Added a 'WHCgiApplication' class in 'src/wh/whcgiapplication.cpp'
	and 'src/wh/whcgiapplication.h'.
	* Added a 'WHCgiPage' class in 'src/wh/whcgipage.cpp' and
	'src/wh/whcgipage.h'.
	* Added a 'cgitest' application in 'src/tests/'.