@@ -18,16 +18,59 @@
 //   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
 //
 
+#include <QObject>
+
 #include "whcgipage.h"
 
 WHCgiPage::WHCgiPage(WHCgiPost *post)
 {
+  page_menu_text=QObject::tr("CGI Page");
+  page_title_text=QObject::tr("CGI Page");
+  page_mime_type="text/html";
   page_post=post;
+  page_settings=new WHSettings(*post->settings());
 }
 
 
 WHCgiPage::~WHCgiPage()
 {
+  delete page_settings;
+}
+
+
+QString WHCgiPage::menuText() const
+{
+  return page_menu_text;
+}
+
+
+void WHCgiPage::setMenuText(const QString &str)
+{
+  page_menu_text=str;
+}
+
+
+QString WHCgiPage::titleText() const
+{
+  return page_title_text;
+}
+
+
+void WHCgiPage::setTitleText(const QString &str)
+{
+  page_title_text=str;
+}
+
+
+QString WHCgiPage::mimeType() const
+{
+  return page_mime_type;
+}
+
+
+void WHCgiPage::setMimeType(const QString &str)
+{
+  page_mime_type=str;
 }
 
 
@@ -40,6 +83,36 @@ void WHCgiPage::exit(int resp_code,const QString &msg)
     printf("%s\n",(const char *)msg.toUtf8());
   }
   ::exit(0);
+}
+
+
+WHSettings *WHCgiPage::settings()
+{
+  return page_settings;
+}
+
+
+void WHCgiPage::renderHead()
+{
+  printf("Content-type: %s\n",(const char *)page_mime_type.toUtf8());
+  printf("\n");
+  printf("<!doctype html>\n");
+  printf("<html itemscope=\"\" itemtype=\"http://schema.org/WebPage\" lang=\"%s\">\n",(const char *)page_settings->language().toUtf8());
+  printf("<head>\n");
+  printf("<title>%s</title>\n",(const char *)page_title_text.toUtf8());
+  printf("</head>\n");
+}
+
+
+void WHCgiPage::renderBodyStart()
+{
+  printf("<body>\n");
+}
+
+
+void WHCgiPage::renderBodyEnd()
+{
+  printf("</body></html>\n");
 }
 
 
