@@ -22,3 +22,6 @@
 	* Added a 'WHCgiPage' class in 'src/wh/whcgipage.cpp' and
 	'src/wh/whcgipage.h'.
 	* Added a 'cgitest' application in 'src/tests/'.
+2015-12-13 Fred Gleason <fredg@paravelsystems.com>
+	* Add a 'WHSettings' class in 'src/wh/whsettings.cpp' and
+	'src/wh/whsettings.h'.
